--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "browser-sync": "^2.24.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-build-branch": "^0.1.4",
     "gulp-eslint": "^5.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-jasmine-phantom": "^3.0.0"
+  }
 }
